--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 :root {
+  --border: #ececec;
   --black: #000;
   --dark: #212121;
   --gray: #757575;
@@ -9,13 +10,32 @@
   --white: #fff;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
+  margin: 0;
   font-family: Roboto, sans-serif;
   font-weight: 400;
   font-size: 14px;
   letter-spacing: 0.03em;
   color: var(--dark);
   background-color: var(--white);
+}
+
+h1,
+h2,
+h3,
+ul,
+p {
+  margin: 0;
+  padding: 0;
+}
+
+button {
+  padding: 0;
+  border: none;
 }
 
 .link {
@@ -48,12 +68,76 @@ body {
 }
 
 .section-title {
+  margin-bottom: 50px;
+  text-align: center;
   font-size: 36px;
   line-height: 1.167;
   color: var(--dark);
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.header {
+  padding-top: 25px;
+  padding-bottom: 25px;
+  border-bottom: 1px solid var(--border);
+}
+
+.header-navigation {
+  display: flex;
+  align-items: center;
+}
+
+.header-navigation-list {
+  display: flex;
+  margin-right: 330px;
+}
+
+.header-navigation-item {
+  margin-right: 50px;
+}
+
+.header-navigation-item:last-child {
+  margin-right: 0px;
+}
+
+.header-navigation-link {
+  font-weight: 500;
+  line-height: 1.142;
+  letter-spacing: 0.02em;
+  color: var(--dark);
+}
+
+.site-navigation {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .logo {
+  margin-right: 93px;
   font-family: 'Raleway';
   font-size: 26px;
   font-weight: 700;
@@ -63,13 +147,6 @@ body {
 
 .logo span {
   color: var(--blue);
-}
-
-.header-navigation {
-  font-weight: 500;
-  line-height: 1.142;
-  letter-spacing: 0.02em;
-  color: var(--dark);
 }
 
 .current {
@@ -83,60 +160,191 @@ body {
   color: var(--gray);
 }
 
+.header-contacts {
+  display: flex;
+}
+
+.header-contacts-item {
+  margin-right: 50px;
+}
+
+.header-contacts-item:last-child {
+  margin-right: 0;
+}
+
 .link-hover:hover,
 .link-hover:focus {
   color: var(--blue);
 }
 
 .hero {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 600px;
   background-color: var(--dark-gray);
 }
 
 .hero h1 {
+  max-width: 696px;
   font-weight: 900;
   font-size: 44px;
   letter-spacing: 0.06em;
   line-height: 1.363;
+  text-align: center;
   text-transform: uppercase;
   color: var(--white);
 }
 
-.advantages h3 {
+.hero-button {
+  display: block;
+  margin: 40px auto 0;
+  padding: 10px 32px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+  color: var(--white);
+  background-color: var(--blue);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+
+.advantages-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.advantages-item {
+  margin-right: 30px;
+}
+
+.advantages-item {
+  margin-right: 0;
+}
+
+.advantages-item {
+  max-width: 270px;
+}
+
+.advantages-title {
+  margin-bottom: 10px;
   font-size: 14px;
   line-height: 1.142;
   text-transform: uppercase;
   color: var(--dark);
 }
 
-.advantages p {
+.advantages-description {
   line-height: 1.714;
   color: var(--gray);
+}
+
+.services-list {
+  display: flex;
+}
+
+.services-list-item {
+  margin-right: 30px;
+}
+
+.services-list-item:last-child {
+  margin-right: 0;
 }
 
 .team {
   background-color: var(--lite-gray);
 }
 
-.team h3 {
+.team-list {
+  display: flex;
+}
+
+.team-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 30px;
+  background-color: var(--white);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.team-card:last-child {
+  margin-right: 0;
+}
+
+.team-card-text {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  text-align: center;
+}
+
+.team-title {
+  margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.187;
   color: var(--dark);
 }
 
-.team p {
+.team-description {
   font-size: 16px;
   line-height: 1.187;
   color: var(--gray);
 }
 
-.works-title {
+.works {
+}
+
+.works-filters {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+.works-filters-item {
+  margin-right: 8px;
+}
+
+.works-filters-item:last-child {
+  margin-right: 0;
+}
+
+.works-filters-button {
+  display: block;
+  padding: 6px 22px;
+  color: var(--dark);
+  background-color: var(--lite-gray);
+  border-radius: 4px;
+}
+
+.works-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
+.works-list-card img {
+  display: block;
+}
+
+.work-list-text {
+  padding: 20px 24px;
+  border-right: 1px solid var(--border);
+  border-bottom: 1px solid var(--border);
+  border-left: 1px solid var(--border);
+}
+
+.works-list-title {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
 }
 
-.works-description {
+.works-list-description {
   font-size: 16px;
   line-height: 1.875;
   color: var(--gray);
@@ -156,7 +364,26 @@ body {
   color: var(--white);
 }
 
-footer .contacts {
+.address-list {
+  margin-bottom: 9px;
+}
+
+.address-list:last-child {
+  margin-bottom: 0;
+}
+
+.footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.footer .logo {
+  display: inline-block;
+  margin-right: 0;
+  margin-bottom: 20px;
+}
+
+.footer .contacts {
   font-weight: 400;
   line-height: 1.714;
   color: var(--transparent-gray);
