--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 :root {
   --border: #ececec;
+  --hero-button-hover: #188ce8;
   --black: #000;
   --dark: #212121;
   --gray: #757575;
@@ -205,6 +206,10 @@ button {
   border-radius: 4px;
 }
 
+.hero-button:hover {
+  background-color: var(--hero-button-hover);
+}
+
 .advantages-list {
   display: flex;
   align-items: center;
@@ -315,6 +320,12 @@ button {
   color: var(--dark);
   background-color: var(--lite-gray);
   border-radius: 4px;
+}
+
+.works-filters-button:hover {
+  border-radius: 4px;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .works-list {
