--- a/css/styles.css
+++ b/css/styles.css
@@ -90,7 +90,7 @@ button {
 }
 
 .container {
-  max-width: 1200px;
+  width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
 }
@@ -100,9 +100,11 @@ button {
   padding-bottom: 94px;
 }
 
+.image {
+  display: block;
+}
+
 .header {
-  padding-top: 25px;
-  padding-bottom: 25px;
   border-bottom: 1px solid var(--border);
 }
 
@@ -113,7 +115,6 @@ button {
 
 .header-navigation-list {
   display: flex;
-  margin-right: 330px;
 }
 
 .header-navigation-item {
@@ -125,6 +126,9 @@ button {
 }
 
 .header-navigation-link {
+  display: inline-block;
+  padding-top: 32px;
+  padding-bottom: 32px;
   font-weight: 500;
   line-height: 1.142;
   letter-spacing: 0.02em;
@@ -134,7 +138,6 @@ button {
 .site-navigation {
   display: flex;
   align-items: center;
-  justify-content: center;
 }
 
 .logo {
@@ -163,6 +166,7 @@ button {
 
 .header-contacts {
   display: flex;
+  margin-left: auto;
 }
 
 .header-contacts-item {
@@ -175,14 +179,14 @@ button {
 
 .hero {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 600px;
+  padding-top: 200px;
+  padding-bottom: 200px;
   background-color: var(--dark-gray);
 }
 
 .hero h1 {
-  max-width: 696px;
+  margin: 0 auto;
+  width: 696px;
   font-weight: 900;
   font-size: 44px;
   letter-spacing: 0.06em;
@@ -194,7 +198,7 @@ button {
 
 .hero-button {
   display: block;
-  margin: 40px auto 0;
+  margin: 30px auto 0;
   padding: 10px 32px;
   font-weight: 700;
   font-size: 16px;
@@ -225,7 +229,7 @@ button {
 }
 
 .advantages-item {
-  max-width: 270px;
+  width: 270px;
 }
 
 .advantages-title {
@@ -266,9 +270,6 @@ button {
 }
 
 .team-card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   margin-right: 30px;
   background-color: var(--white);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -281,8 +282,7 @@ button {
 }
 
 .team-card-text {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding: 30px 10px;
   text-align: center;
 }
 
@@ -303,7 +303,7 @@ button {
 .works-filters {
   display: flex;
   justify-content: center;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
 }
 
 .works-filters-item {
@@ -334,10 +334,6 @@ button {
   gap: 30px;
 }
 
-.works-list-card img {
-  display: block;
-}
-
 .work-list-text {
   padding: 20px 24px;
   border-right: 1px solid var(--border);
@@ -346,6 +342,7 @@ button {
 }
 
 .works-list-title {
+  margin-bottom: 4px;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
